# highway

./: Cargo.toml  README.md
src/: alloc.rs  dispatch.rs  lane.rs  lib.rs  ops.rs  simd.rs  tag.rs
src/backend/: avx2.rs  avx512.rs  crypto_soft.rs  mod.rs  scalar.rs  sse2.rs
tests/: cross_target.rs  crypto.rs  ops_comprehensive.rs  safety.rs
